--- a/style.css
+++ b/style.css
@@ -4506,7 +4506,12 @@ a.to-the-top > * {
 
 	/* ALIGNMENT CLASSES */
 
-	.entry-content > .alignleft,
+	.entry-content > .alignleft {
+
+		/*rtl:ignore*/
+		margin-left: 4rem;
+	}
+
 	.entry-content > p .alignleft,
 	.entry-content > .wp-block-image .alignleft,
 	[class*="wp-block"].alignwide [class*="__inner-container"] > .alignleft,
@@ -4528,7 +4533,12 @@ a.to-the-top > * {
 		margin-left: 0;
 	}
 
-	.entry-content > .alignright,
+	.entry-content > .alignright {
+
+		/*rtl:ignore*/
+		margin-right: 4rem;
+	}
+
 	.entry-content > p .alignright,
 	.entry-content > .wp-block-image .alignright,
 	[class*="wp-block"].alignwide [class*="__inner-container"] > .alignright,
@@ -5684,6 +5694,8 @@ a.to-the-top > * {
 	.entry-content > p .alignleft,
 	.entry-content > .wp-block-image .alignleft {
 		position: absolute;
+
+		/*rtl:ignore*/
 		right: calc((100vw - 58rem) / 2 + 58rem);
 		max-width: calc((100% - 58rem) / 2 - 4rem);
 	}
@@ -5692,6 +5704,8 @@ a.to-the-top > * {
 	[class*="wp-block"]:not(.alignwide):not(.alignfull) [class*="__inner-container"] > p .alignleft,
 	[class*="wp-block"]:not(.alignwide):not(.alignfull) [class*="__inner-container"] > .wp-block-image .alignleft {
 		position: relative;
+
+		/*rtl:ignore*/
 		right: inherit;
 		max-width: inherit;
 	}
@@ -5703,6 +5717,8 @@ a.to-the-top > * {
 	[class*="wp-block"].alignfull [class*="__inner-container"] > p .alignleft,
 	[class*="wp-block"].alignfull [class*="__inner-container"] > .wp-block-image .alignleft {
 		position: absolute;
+
+		/*rtl:ignore*/
 		right: calc((100% - 58rem) / 2 + 58rem);
 		max-width: calc((100% - 58rem) / 2 - 4rem);
 	}
@@ -5712,6 +5728,8 @@ a.to-the-top > * {
 	.entry-content > .wp-block-image .alignright,
 	[class*="__inner-container"] > .alignright {
 		position: absolute;
+
+		/*rtl:ignore*/
 		left: calc((100vw - 58rem) / 2 + 58rem);
 		max-width: calc((100% - 58rem) / 2 - 4rem);
 	}
@@ -5720,6 +5738,8 @@ a.to-the-top > * {
 	[class*="wp-block"]:not(.alignwide):not(.alignfull) [class*="__inner-container"] > p .alignright,
 	[class*="wp-block"]:not(.alignwide):not(.alignfull) [class*="__inner-container"] > .wp-block-image .alignright {
 		position: relative;
+
+		/*rtl:ignore*/
 		left: inherit;
 		max-width: inherit;
 	}
@@ -5731,6 +5751,8 @@ a.to-the-top > * {
 	[class*="wp-block"].alignfull [class*="__inner-container"] > p .alignright,
 	[class*="wp-block"].alignfull [class*="__inner-container"] > .wp-block-image .alignright {
 		position: absolute;
+
+		/*rtl:ignore*/
 		left: calc((100% - 58rem) / 2 + 58rem);
 		max-width: calc((100% - 58rem) / 2 - 4rem);
 	}
@@ -6019,6 +6041,7 @@ a.to-the-top > * {
 
 		/*rtl:ignore*/
 		margin-left: -31rem;
+		max-width: 29rem;
 	}
 
 	.entry-content > .alignright,
@@ -6027,6 +6050,7 @@ a.to-the-top > * {
 
 		/*rtl:ignore*/
 		margin-right: -31rem;
+		max-width: 29rem;
 	}
 
 	.entry-content > .alignwide {
